Bug 294111 - Dolphin doesnt preserve folders horizontally in folders panel
Summary: Dolphin doesnt preserve folders horizontally in folders panel
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: folders (other bugs)
Version First Reported In: 2.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-14 22:33 UTC by
Modified: 2012-02-15 15:21 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description 2012-02-14 22:33:15 UTC
Version:           2.0 (using Devel) 
OS:                Linux

Now when i want to select a folder in fodlers panel i need to click over the name and thats rather annoying when we have severall folders open and the folder we need to select for example haves a small name.

Before we just need to point the mouse to the horizontal line to where that folder was locaed and the folder was automatically selected.

I dont knw if this was done on purpose, bu if thats the case can it be possible give the user the ability to choose to between these 2 behaviours?

Reproducible: Always

Steps to Reproduce:
Simple try select a folder in folders panel and its only possible to select it over the name and not by selecting the horizontal line of that folder.

Actual Results:  
Already described.

Expected Results:  
Shoud be possible the old behaviour where selecting the horizontal like would select select the fodler in that line.

OS: Linux (x86_64) release 3.2.2-1.1-desktop
Compiler: gcc
Comment 1 Peter Penz 2012-02-14 22:53:19 UTC
Thanks for the detailed description, I agree that this should be fixed.
Comment 2 Peter Penz 2012-02-15 15:20:29 UTC
Git commit 98d98f7c2457dc24223d77da77398c816dddf8b8 by Peter Penz.
Committed on 15/02/2012 at 16:10.
Pushed by ppenz into branch 'KDE/4.8'.

Folders Panel: Use the whole width as selection region

As no rubberband-selection is enabled for the Folders Panel it does
not make sense to keep the selection region as small as possible.
FIXED-IN: 4.8.1

M  +4    -1    dolphin/src/kitemviews/kfileitemlistwidget.cpp
M  +4    -2    dolphin/src/kitemviews/kitemliststyleoption.cpp
M  +1    -0    dolphin/src/kitemviews/kitemliststyleoption.h
M  +1    -0    dolphin/src/panels/folders/folderspanel.cpp
M  +24   -20   dolphin/src/panels/folders/treeviewcontextmenu.cpp

http://commits.kde.org/kde-baseapps/98d98f7c2457dc24223d77da77398c816dddf8b8
Comment 3 Peter Penz 2012-02-15 15:21:14 UTC
Git commit c869364918676d5874a87e8a0d43576200851b43 by Peter Penz.
Committed on 15/02/2012 at 16:10.
Pushed by ppenz into branch 'master'.

Folders Panel: Use the whole width as selection region

As no rubberband-selection is enabled for the Folders Panel it does
not make sense to keep the selection region as small as possible.
FIXED-IN: 4.8.1

M  +4    -1    dolphin/src/kitemviews/kfileitemlistwidget.cpp
M  +4    -2    dolphin/src/kitemviews/kitemliststyleoption.cpp
M  +1    -0    dolphin/src/kitemviews/kitemliststyleoption.h
M  +1    -0    dolphin/src/panels/folders/folderspanel.cpp
M  +24   -20   dolphin/src/panels/folders/treeviewcontextmenu.cpp

http://commits.kde.org/kde-baseapps/c869364918676d5874a87e8a0d43576200851b43